<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_background_layout"
            android:padding="8dp">

            <ImageView
                android:id="@+id/rowImageProduct"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/img_png"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/rowProductDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/rowProductTittle"
                style="@style/login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/rowProductDescription"
                app:layout_constraintStart_toStartOf="@id/rowProductDescription"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/rowProductDescription"
                style="@style/login_text"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:scrollbars="vertical"
                android:gravity="center"
                android:text="@string/description_example"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/rowImageProduct"
                app:layout_constraintTop_toBottomOf="@id/rowProductTittle" />

            <TextView
                android:id="@+id/rowProductCategory"
                style="@style/login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/rowProductDescription"
                app:layout_constraintStart_toStartOf="@id/rowProductDescription"
                app:layout_constraintTop_toBottomOf="@id/rowProductDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>